[package]
name = "ghoti-optimizer"
version = "0.1.0"
edition = "2021"

[dependencies]
cpu = { path = "../cpu", package = "ghoti-cpu" }
simulator = { path = "../simulator", package = "ghoti-simulator" }
logger = { path = "../logger", package = "ghoti-logger" }
rand = "0.8.5"
chrono = "0.4.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "3.2.7", features = ["derive"] }
