[package]
name = "ghoti-simulator"
version = "0.1.0"
edition = "2021"

[dependencies]
puyoai = { path = "../puyoai", package = "ghoti-puyoai" }
cpu = { path = "../cpu", package = "ghoti-cpu" }
logger = { path = "../logger", package = "ghoti-logger" }
rand = "0.8.5"
chrono = { version = "0.4.19", features = ["serde"] }
clap = { version = "4.0.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "2.0.0"
dialoguer = "0.10.2"
